added jokes along w advice generator

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advice Generator</title>
+    <title>Advice and Jokes Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Advice Generator</h1>
-        <p id="advice">Click the button to get advice!</p>
-        <button id="getAdviceBtn">Get Advice</button>
+        <h1>Advice and Jokes Generator</h1>
+        <div class="content">
+            <p id="output">Click a button to get advice or a joke!</p>
+            <button id="getAdviceBtn" class="btn">Get Advice</button>
+            <button id="getJokeBtn" class="btn">Get Joke</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
