can save to history, only 5 at a time, tracks favorites

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <button id="getAdviceBtn" class="btn">Get Advice</button>
             <button id="getJokeBtn" class="btn">Get Joke</button>
         </div>
+        <div class="history">
+            <h2>History</h2>
+            <ul id="historyList"></ul>
+        </div>
+        <div class="favorites">
+            <h2>Favorites</h2>
+            <ul id="favoritesList"></ul>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
