improves css and added clear favorites button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </div>
         <div class="favorites">
             <h2>Favorites</h2>
-            <ul id="favoritesList"></ul>
+            <ul id="favoritesList">
+                <li>No favorites saved yet.</li>
+            </ul>
+            <button id="clearFavoritesBtn" class="btn">Clear Favorites</button>
         </div>
     </div>
     <script src="script.js"></script>
