--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advice and Jokes Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" id="themeStylesheet">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,15 @@
                 <li>No favorites saved yet.</li>
             </ul>
             <button id="clearFavoritesBtn" class="btn">Clear Favorites</button>
+        </div>
+        <div class="theme-selector">
+            <label for="themeSelect">Choose a Theme:</label>
+            <select id="themeSelect" class="btn">
+                <option value="styles.css">Default</option>
+                <option value="dark-theme.css">Dark</option>
+                <option value="light-theme.css">Light</option>
+                <option value="colorful-theme.css">Colorful</option>
+            </select>
         </div>
     </div>
     <script src="script.js"></script>
