--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             </ul>
             <button id="clearFavoritesBtn" class="btn">Clear Favorites</button>
         </div>
+
+    <div id="dailyTipSection">
+        <h2>Daily Tip</h2>
+        <p id="dailyTip">Fetching daily tip...</p>
+    </div>
         <div class="theme-selector">
             <label for="themeSelect">Choose a Theme:</label>
             <select id="themeSelect" class="btn">
