added tip generator button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <div id="dailyTipSection">
         <h2>Daily Tip</h2>
         <p id="dailyTip">Fetching daily tip...</p>
+        <button id="getTipBtn">Get Daily Tip</button>
+
     </div>
         <div class="theme-selector">
             <label for="themeSelect">Choose a Theme:</label>
